app/.cxx/Debug/2b73r6e4/x86_64/android_gradle_build_stdout_blazefacencnn_x86_64.txt
ninja: Entering directory `D:\collage\ncnn android\ncnn_Android_blazeface-main\ncnn_Android_mediapipe_blazeface\app\.cxx\Debug\2b73r6e4\x86_64'
[1/5] Building CXX object CMakeFiles/blazefacencnn.dir/ndkcamera.cpp.o
[2/5] Building CXX object CMakeFiles/blazefacencnn.dir/face.cpp.o
FAILED: CMakeFiles/blazefacencnn.dir/face.cpp.o 
C:\Users\MO3TAZ~1\AppData\Local\Android\Sdk\ndk\214~1.707\TOOLCH~1\llvm\prebuilt\WINDOW~1\bin\CLANG_~1.EXE --target=x86_64-none-linux-android24 --gcc-toolchain="C:/Users/Mo3taz kayad/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64" --sysroot="C:/Users/Mo3taz kayad/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64/sysroot"  -Dblazefacencnn_EXPORTS -isystem "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/x86_64/include/ncnn" -isystem "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/sdk/native/jni/include" -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC   -fno-rtti -fno-exceptions -std=gnu++11 -MD -MT CMakeFiles/blazefacencnn.dir/face.cpp.o -MF CMakeFiles\blazefacencnn.dir\face.cpp.o.d -o CMakeFiles/blazefacencnn.dir/face.cpp.o -c "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp"
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3199:44: warning: format specifies type 'unsigned int' but the argument has type 'std::__ndk1::vector<cv::Point_<float>, std::__ndk1::allocator<cv::Point_<float> > >::size_type' (aka 'unsigned long') [-Wformat]
        ALOG("size of Fore head vec: %ul", objects[i].fore_head.size());
                                     ~~    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
                                     %lu
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:22:66: note: expanded from macro 'ALOG'
#define  ALOG(...)  __android_log_print(ANDROID_LOG_INFO,LOG_TAG,__VA_ARGS__)
                                                                 ^~~~~~~~~~~
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3231:26: warning: relational comparison result unused [-Wunused-comparison]
        for(int l = 0; l < mask.cols , l++){
                       ~~^~~~~~~~~~~
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3231:43: error: expected ';' in 'for' statement specifier
        for(int l = 0; l < mask.cols , l++){
                                          ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3232:31: warning: relational comparison result unused [-Wunused-comparison]
            for(int m = 0 ; m < mask.rows , m++){
                            ~~^~~~~~~~~~~
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3232:48: error: expected ';' in 'for' statement specifier
            for(int m = 0 ; m < mask.rows , m++){
                                               ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3233:22: error: use of undeclared identifier 'j'
                mask[j][r][0] = 255;
                     ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3233:25: error: use of undeclared identifier 'r'
                mask[j][r][0] = 255;
                        ^
3 warnings and 4 errors generated.
[3/5] Building CXX object CMakeFiles/blazefacencnn.dir/RPPG.cpp.o
[4/5] Building CXX object CMakeFiles/blazefacencnn.dir/blazefacencnn.cpp.o
ninja: build stopped: subcommand failed.
